--- a/charts/bitcoind/values.yaml
+++ b/charts/bitcoind/values.yaml
@@ -106,12 +106,13 @@ bitcoindGenericConfig:
 - debug=rpc
 - shrinkdebugfile=1
 - server=1
-- txindex=1
+- txindex=0
 - printtoconsole=1
 - rpcuser=rpcuser
 - zmqpubrawtx=tcp://0.0.0.0:28333
 - zmqpubrawblock=tcp://0.0.0.0:28332
 - blockfilterindex=1
+- dbcache=2000
 
 # these flags need to be here and not in bitcoindGenericConfig because they have to be present under a separate section inside bitcoind.conf when in testnet/regtest mode
 bitcoindCustomConfig:
