--- a/charts/monitoring/Chart.yaml
+++ b/charts/monitoring/Chart.yaml
@@ -25,3 +25,6 @@ dependencies:
   - name: prometheus
     repository: https://prometheus-community.github.io/helm-charts
     version: 25.17.0
+  - name: kubernetes-dashboard
+    version: 7.1.2
+    repository: "https://kubernetes.github.io/dashboard/"
