--- a/charts/bitcoind/testnet-values.yaml
+++ b/charts/bitcoind/testnet-values.yaml
@@ -23,3 +23,9 @@ bitcoindCustomConfig:
   bind: 0.0.0.0
   rpcbind: 0.0.0.0
   rpcallowip: 0.0.0.0/0
+
+startupProbe:
+  failureThreshold: 90
+
+livenessProbe:
+  failureThreshold: 3
