--- a/charts/bitcoind/values.yaml
+++ b/charts/bitcoind/values.yaml
@@ -66,18 +66,18 @@ ingress:
   #    hosts:
   #      - chart-example.local
 
-resources: {}
+resources:
   # We usually recommend not to specify default resources and to leave this as a conscious
   # choice for the user. This also increases chances charts run on environments with little
   # resources, such as Minikube. If you do want to specify resources, uncomment the following
   # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
   # We recommend using the following values due to the resource intensive nature of bitcoind
-  # limits:
-  #   cpu: 3000m
-  #   memory: 5120Mi
-  # requests:
-  #   cpu: 100m
-  #   memory: 4096Mi
+  limits:
+    cpu: 3000m
+    memory: 5200Mi
+  requests:
+    cpu: 1000m
+    memory: 4096Mi
 
 persistence:
   enabled: true
@@ -104,6 +104,7 @@ podLabels:
   app: bitcoind
 
 bitcoindGenericConfig:
+- debug=mempool
 - debug=rpc
 - shrinkdebugfile=1
 - server=1
