--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -38,7 +38,7 @@ jobs:
         if: github.ref == 'refs/heads/main'
         run: |
           helm upgrade --install bitcoind charts/bitcoind/ -f charts/bitcoind/values.yaml --namespace bitcoin-mainnet --create-namespace
-          helm upgrade kube-prometheus-stack prometheus-community/kube-prometheus-stack --namespace namespace kube-prometheus-stack --values charts/monitoring/values.yaml
+          helm upgrade --install lightningd charts/lightningd/ -f charts/lightningd/values.yaml --namespace lightning-mainnet --create-namespace
       - name: Deploy Testnet
         if: github.ref == 'refs/heads/development'
         run: |
