--- a/charts/lightningd/templates/service.yaml
+++ b/charts/lightningd/templates/service.yaml
@@ -2,14 +2,12 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "lightningd.fullname" . }}
-  labels:
+  labels: 
     {{- include "lightningd.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
     - port: {{ .Values.service.port }}
-      targetPort: http
-      protocol: TCP
-      name: http
+      name: p2p
   selector:
     {{- include "lightningd.selectorLabels" . | nindent 4 }}
