--- a/charts/lightningd/values.yaml
+++ b/charts/lightningd/values.yaml
@@ -1,22 +1,17 @@
 global:
-  network: mainnet
-  service:
-    ports:
-      rpc: 8332
-
-secrets:
-  create: true
+  network: bitcoin
 
 replicaCount: 1
 terminationGracePeriodSeconds: 60
 
-image:
-  repository: lncm/bitcoind
-  pullPolicy: IfNotPresent
-  tag: v26.0
+secrets:
+  create: true
 
-extraInitContainers: []
-sidecarContainers: []
+image:
+  repository: elementsproject/lightningd
+  pullPolicy: IfNotPresent
+  # Overrides the image tag whose default is the chart appVersion.
+  tag: "v24.02-amd64"
 
 imagePullSecrets: []
 nameOverride: ""
@@ -36,49 +31,41 @@ podAnnotations: {}
 podSecurityContext:
   fsGroup: 2000
 
-securityContext:
-  # capabilities:
-  #   drop:
-  #   - ALL
-  readOnlyRootFilesystem: true
-  runAsNonRoot: true
-  runAsUser: 1000
-  runAsGroup: 3000
+securityContext: {}
 
 service:
   type: ClusterIP
-  ports:
-    zmqpubrawtx: 28333
-    zmqpubrawblock: 28332
-    p2p: 8333
-    metrics: 3000
+  port: 9735
 
 ingress:
   enabled: false
+  className: ""
   annotations:
     {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
     - host: chart-example.local
-      paths: []
+      paths:
+        - path: /
+          pathType: ImplementationSpecific
   tls: []
   #  - secretName: chart-example-tls
   #    hosts:
   #      - chart-example.local
 
 resources:
+  {}
   # We usually recommend not to specify default resources and to leave this as a conscious
   # choice for the user. This also increases chances charts run on environments with little
   # resources, such as Minikube. If you do want to specify resources, uncomment the following
   # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-  # We recommend using the following values due to the resource intensive nature of bitcoind
-  limits:
-    cpu: 3000m
-    memory: 5200Mi
-  requests:
-    cpu: 1000m
-    memory: 4096Mi
+  # limits:
+  #   cpu: 100m
+  #   memory: 128Mi
+  # requests:
+  #   cpu: 100m
+  #   memory: 128Mi
 
 persistence:
   enabled: true
@@ -91,42 +78,55 @@ persistence:
   ##
   # storageClass: "-"
   accessMode: ReadWriteOnce
-  size: 750Gi
+  size: 5Gi
 
 nodeSelector: {}
 
 tolerations: []
 
-affinity: {}
+affinity:
+  podAffinity:
+    preferredDuringSchedulingIgnoredDuringExecution:
+      - weight: 100
+        podAffinityTerm:
+          labelSelector:
+            matchExpressions:
+              - key: app.kubernetes.io/name
+                operator: In
+                values:
+                  - bitcoind
+          topologyKey: kubernetes.io/hostname
 
 labels: {}
 
 podLabels:
-  app: bitcoind
+  app: lightningd
 
-bitcoindGenericConfig:
-  - debug=rpc
-  - shrinkdebugfile=1
-  - server=1
-  - txindex=1
-  - printtoconsole=1
-  - rpcuser=rpcuser
-  - zmqpubrawtx=tcp://0.0.0.0:28333
-  - zmqpubrawblock=tcp://0.0.0.0:28332
-  - blockfilterindex=1
+bitcoinNode:
+  host: "bitcoind"
+  port: 8332
 
-# these flags need to be here and not in bitcoindGenericConfig because they have to be present under a separate section inside bitcoind.conf when in testnet/regtest mode
-bitcoindCustomConfig:
-  bind: 0.0.0.0
-  rpcbind: 0.0.0.0
-  rpcallowip: 0.0.0.0/0
-
-descriptor:
-  secretName: ""
-  secretKey: ""
+lightningdGenericConfig:
+  - developer
+  - bitcoin-rpcuser=rpcuser
+  - bitcoin-rpcconnect=bitcoind.bitcoin-mainnet.svc.cluster.local
+  - bitcoin-rpcport=8332
+  - bitcoin-retry-timeout=3600
+  - log-level=debug
+  - alias=NumeraireSwissKnife
+  - rgb=55C692
+  - fee-base=800
+  - fee-per-satoshi=8
+  - min-capacity-sat=1000000
+  - ignore-fee-limits=true
+  - max-concurrent-htlcs=30
+  - funding-confirms=3
+  - dev-allowdustreserve=true
+  - plugin=/root/.lightning/plugins/lspd_cln_plugin
+  - lsp-listen=127.0.0.1:12312
 
 startupProbe:
-  failureThreshold: 90
+  failureThreshold: 5
 
 livenessProbe:
   failureThreshold: 3
