--- a/charts/lightningd/values.yaml
+++ b/charts/lightningd/values.yaml
@@ -102,10 +102,6 @@ labels: {}
 podLabels:
   app: lightningd
 
-bitcoinNode:
-  host: "bitcoind"
-  port: 8332
-
 lightningdGenericConfig:
   - developer
   - bitcoin-rpcuser=rpcuser
@@ -124,6 +120,21 @@ lightningdGenericConfig:
   - dev-allowdustreserve=true
   - plugin=/root/.lightning/plugins/lspd_cln_plugin
   - lsp-listen=127.0.0.1:12312
+
+lspdGenericConfig:
+  listenAddress: 0.0.0.0:8888
+  awsRegion: eu-central-1
+  awsAccessKey: AKIATCKAS3WR3C5GH3QK
+  openChannelNotificationTo: "NumeraireSwissKnife <lightning@numeraire.tech>"
+  openChannelNotificationCC: "Dario Varela <dario.varela@numeraire.tech>"
+  openChannelNotificationFrom: "noreply@numeraire.tech"
+  channelmismatchNotificationTo: "NumeraireSwissKnife <lightning@numeraire.tech>"
+  channelmismatchNotificationCC: "Dario Varela <dario.varea@numeraire.tech>"
+  channelmismatchNotificationFrom: "noreply@numeraire.tech"
+  mempoolApiBaseUrl: https://mempool.space/api/v1/
+  mempoolPriority: economy
+  lspName: NumeraireSwissKnife
+  pubKey: 02fc22cb2dd9c71b39ad246ae206259376e0127cce2192d4061abd0172b53f391b
 
 startupProbe:
   failureThreshold: 5
