--- a/charts/lightningd/templates/statefulset.yaml
+++ b/charts/lightningd/templates/statefulset.yaml
@@ -162,7 +162,9 @@ spec:
               value: {{.Values.lspdGenericConfig.mempoolPriority}}
           ports:
             - name: p2p
-              containerPort: {{ .Values.service.port }}
+              containerPort: {{ .Values.p2pService.port }}
+            - name: lspd
+              containerPort: {{ .Values.lspdService.port }}
           volumeMounts:
             - name: data
               mountPath: /root/.lightning
