--- a/charts/lightningd/Chart.yaml
+++ b/charts/lightningd/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: bitcoind
+name: lightningd
 description: A Helm chart for Kubernetes
 
 # A chart can be either an 'application' or a 'library' chart.
@@ -20,4 +20,5 @@ version: 1.0.0
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
 # follow Semantic Versioning. They should reflect the version the application is using.
-appVersion: "26.0.0"
+# It is recommended to use it with quotes.
+appVersion: "24.02"
