--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -45,7 +45,7 @@ jobs:
       - name: Deploy Mainnet
         if: github.ref == 'refs/heads/main'
         run: |
-          helm upgrade kube-prometheus-stack prometheus-community/kube-prometheus-stack --version 55.7.0 --namespace kube-prometheus-stack --values charts/monitoring/values.yml
+          helm upgrade kube-prometheus-stack prometheus-community/kube-prometheus-stack --version 55.7.0 --namespace kube-prometheus-stack --values charts/monitoring/values.yaml
           helm upgrade --install bitcoind charts/bitcoind/ -f charts/bitcoind/values.yaml --namespace bitcoin-mainnet --create-namespace
           helm upgrade --install lightningd charts/lightningd/ -f charts/lightningd/values.yaml --namespace lightning-mainnet --create-namespace
       - name: Deploy Testnet
