cert manager and ingress done

--- a/charts/lightningd/values.yaml
+++ b/charts/lightningd/values.yaml
@@ -33,7 +33,14 @@ podSecurityContext:
 
 securityContext: {}
 
+ingress:
+  enabled: false
+  annotations: {}
+  tls: []
+
 lspdService:
+  host: lspd.swissknife.numeraire.tech
+  secretName: lspd-tls
   staticIP: ""
   type: ClusterIP
   annotations: {}
