--- a/charts/networking/templates/clusterissuer.yaml
+++ b/charts/networking/templates/clusterissuer.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.cert-manager.enabled -}}
 apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
@@ -13,3 +14,4 @@ spec:
       - http01:
           ingress:
             class: nginx
+{{- end }}
