--- a/charts/networking/templates/clusterissuer.yaml
+++ b/charts/networking/templates/clusterissuer.yaml
@@ -1,9 +1,8 @@
-{{- if .Values.cert-manager.enabled -}}
+{{- if .Values.certManager.enabled -}}
 apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
   name: letsencrypt-prod
-  namespace: cert-manager
 spec:
   acme:
     email: infra@numeraire.tech
