--- a/charts/networking/templates/clusterissuer.yaml
+++ b/charts/networking/templates/clusterissuer.yaml
@@ -1,8 +1,8 @@
+{{- if .Values.certManager.enabled -}}
 apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
   name: letsencrypt-prod
-  namespace: cert-manager
 spec:
   acme:
     email: infra@numeraire.tech
@@ -13,3 +13,4 @@ spec:
       - http01:
           ingress:
             class: nginx
+{{- end }}
