--- a/charts/lightningd/values.yaml
+++ b/charts/lightningd/values.yaml
@@ -34,9 +34,7 @@ podSecurityContext:
 securityContext: {}
 
 ingress:
-  enabled: false
-  annotations: {}
-  tls: []
+  enabled: true
 
 lspdService:
   host: lspd.swissknife.numeraire.tech
