--- a/charts/networking/values.yaml
+++ b/charts/networking/values.yaml
@@ -1,8 +1,7 @@
-certManager:
+cert-manager:
   enabled: true
-  installCRDs: true
+  installCRDs: false
   resources: {}
-  installClusterIssuer: false
 
 ingress-nginx:
   enabled: true
