--- a/charts/networking/templates/clusterissuer.yaml
+++ b/charts/networking/templates/clusterissuer.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.certManager.installClusterIssuer -}}
+{{- if .Values.installClusterIssuer -}}
 apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
