--- a/charts/lightningd/templates/ingress.yaml
+++ b/charts/lightningd/templates/ingress.yaml
@@ -4,9 +4,9 @@ kind: Ingress
 metadata:
   name: {{ include "lightningd.fullname" . }}
   annotations:
-    kubernetes.io/ingress.class: nginx
     cert-manager.io/cluster-issuer: "letsencrypt-prod" 
 spec:
+  ingressClassName: nginx
   tls:
   - hosts:
     - {{.Values.lspdService.host}}
